# Rohin

./: .gitignore  .gitmodules  CMakeLists.txt  CompilerOptions.cmake  OpenGL - Shortcut.lnk  README.md  Rohin.10x  Rohin.sln  build.bat  build.sh  build_game.bat  default_options.txt  gitlab_bitgraf  gitlab_bitgraf.pub  main.cpp  meshLayout.txt  premake5.lua  qclean.bat  qgen.bat  qgen19.bat  todo.txt
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  EngineCMake.cmake  build.bat  build.sh
Engine/shader_tool/: CMakeLists.txt  build.bat  shader_tool.cpp
Engine/src/: Engine.hpp  enpch.cpp  enpch.hpp
Engine/src/Engine/: Application.h  Benchmark.cpp  Benchmark.hpp  Buffer.hpp  Defines.h  Engine.h  EngineLayer.cpp  EngineLayer.hpp  EntryPoint.h  Entry_Point.h  LayerStack.cpp  LayerStack.hpp  laml_impl.cpp
Engine/src/Engine/Animation/: Animation.cpp  Animation.h  Animation.hpp
Engine/src/Engine/Collision/: Character_Controller.h  Character_controller.cpp  Collision.h  (+10 more)
Engine/src/Game/: Types.h  game.cpp  game.h
Engine/tmp/: Input.cpp  Input.hpp  stb_image.h  tinygltf.cpp
Engine/tmp/Collision/: Collider.cpp  CollisionHull.cpp  CollisionHull.hpp  CollisionMath.cpp  CollisionMath.hpp  CollisionWorld.cpp  CollisionWorld.hpp
Engine/tmp/GameObject/: AICharacter.cpp  AICharacter.hpp  Astar.cpp  Astar.hpp  Camera.cpp  Camera.hpp  Character.cpp  Character.hpp  GameObject.cpp  GameObject.hpp  Goap.cpp  Goap.hpp  Light.cpp  Light.hpp  Pathfinding.cpp  Pathfinding.hpp  Player.cpp  Player.hpp  PlayerManager.cpp  PlayerManager.hpp  RenderableObject.cpp  RenderableObject.hpp  TriggerVolume.cpp  TriggerVolume.hpp
Engine/tmp/Loaders/: MD5MeshLoader.hpp
Engine/tmp/Render/: DeferredBatchRenderer.cpp  DeferredBatchRenderer.hpp  DynamicFont.cpp  DynamicFont.hpp  RenderBatch.hpp  Shader.cpp  Shader.hpp  Shadowmap.cpp  Shadowmap.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp
Engine/tmp/Resource/: FileSystem.cpp  FileSystem.hpp  MemoryManager.cpp  MemoryManager.hpp  ResourceCatalog.cpp  ResourceCatalog.hpp  Texture.cpp  Texture.hpp  TriangleMesh.hpp
Engine/tmp/Scene/: EnvironmentMap.cpp  EnvironmentMap.hpp  Material.cpp  Material.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
Engine/tmp/Window/: Framebuffer.cpp  Framebuffer.hpp  GBuffer.cpp  GBuffer.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
Game/: CMakeLists.txt  Game.vcxproj  GameCMake.cmake  build.bat  cube.mesh  imgui.ini  output.scene
Game/benchmark/: runtime.json  startup.json
Game/run_tree/: imgui.ini  runtime.json  shutdown.json  startup.conf
Game/run_tree/Data/: test.scene
Game/src/: CameraController.hpp  GameLayer.cpp  GameLayer.hpp  Gem.hpp  MenuLayer.cpp  MenuLayer.hpp  PauseMenuLayer.cpp  PauseMenuLayer.hpp  Player.hpp  main.cpp
Game/src/Examples/: ExampleLevels.hpp
Game/src/Game/: entity.h  game.cpp  game.h
Game/src/Scenes/: AnimTest.cpp  AnimTest.hpp  Level.cpp  Level.hpp  MainMenu.cpp  MainMenu.hpp
Game/src/Scripts/: CameraController.hpp  Gem.hpp  Player.hpp
Game/src/ShaderSrc/: shaders_generated.cpp  shaders_generated.h
Game/src/nbt/: data.hpp  endian.cpp  endian.hpp  io.cpp  io.hpp  nbt.cpp  nbt.hpp  tag.cpp  tag.hpp  test.hpp  utils.hpp
RohinApp/: CMakeLists.txt  build.bat  build.sh
RohinApp/src/RohinApp/: main.cpp  rohin_game.cpp  rohin_game.h
RohinApp/win32/: win32_entry.cpp
RohinGame/: CMakeLists.txt  build.bat  build.sh
RohinGame/src/: main.cpp  rohin_game.cpp
RohinGame/src/win32/: win32_entry.cpp  win32_entry.h
src/Engine/: AudioManager.hpp  Benchmark.cpp  Benchmark.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Console.cpp  Console.hpp  DataTypes.hpp  Engine.cpp  Engine.hpp  EnvironmentMap.hpp  FileSystem.hpp  Framebuffer.cpp  Framebuffer.hpp  GameMath.cpp  GameMath.hpp  HashTable.cpp  Input.cpp  Input.hpp  Material.hpp  MemoryManager.hpp  Message.hpp  OptionsPane.cpp  OptionsPane.hpp  Platform.cpp  Platform.hpp  RenderManager.hpp  ResourceManager.hpp  SceneManager.cpp  SceneManager.hpp  Shader.hpp  Skybox.cpp  StateManager.cpp  StateManager.hpp  Utils.cpp  Utils.hpp  picojson.cpp  picojson.hpp  tinygltf.cpp
src/Engine/Collision/: Collider.cpp  CollisionHull.cpp  CollisionHull.hpp  CollisionMath.cpp  CollisionMath.hpp  CollisionWorld.cpp  CollisionWorld.hpp  GJK.cpp  GJK.hpp  Visualizer.cpp  Visualizer.hpp  sample_gjk.cpp
src/Engine/Editor/: Pickable.cpp  Pickable.hpp
src/Engine/GameObject/: AICharacter.cpp  AICharacter.hpp  Astar.cpp  Astar.hpp  Camera.cpp  Camera.hpp  Character.cpp  Character.hpp  CollisionObject.cpp  CollisionObject.hpp  GameObject.cpp  GameObject.hpp  Goap.cpp  Goap.hpp  Light.cpp  Light.hpp  Pathfinding.cpp  Pathfinding.hpp  Player.cpp  Player.hpp  RenderableObject.cpp  RenderableObject.hpp  SpriteObject.cpp  SpriteObject.hpp  TriggerVolume.cpp  TriggerVolume.hpp
src/Engine/Message/: CoreSystem.cpp  CoreSystem.hpp  EMS.cpp  EMS.hpp  Message.cpp  Message.hpp  MessageBus.cpp  MessageBus.hpp
src/Engine/Render/: BatchRender.hpp  BatchRenderer.cpp  BatchRenderer.hpp  DeferredBatchRenderer.cpp  DeferredBatchRenderer.hpp  DynamicFont.cpp  DynamicFont.hpp  NewRender.cpp  NewRender.hpp  RenderBatch.hpp  RenderManager.cpp  RenderManager.hpp  Shader.cpp  Shader.hpp  Shadowmap.cpp  Shadowmap.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  stb_implementation.cpp  stb_truetype.hpp
src/Engine/Resource/: FileSystem.cpp  FileSystem.hpp  MemoryManager.cpp  MemoryManager.hpp  ResourceCatalog.cpp  ResourceCatalog.hpp  ResourceManager.cpp  ResourceManager.hpp  Texture.cpp  Texture.hpp  TriangleMesh.hpp
src/Engine/Scene/: Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  EnvironmentMap.cpp  EnvironmentMap.hpp  Lights.hpp  Material.cpp  Material.hpp  Models.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SkyBox.hpp
src/Engine/UI/: UIElement.cpp  UIElement.hpp  UIRenderer.cpp  UIRenderer.hpp
src/Engine/Window/: Framebuffer.cpp  Framebuffer.hpp  GBuffer.cpp  GBuffer.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
src/Engine/g_GameObject/: PlayerManager.cpp  PlayerManager.hpp
(+756 files in other folders)
